fix(mobile) Title has wrong height

--- a/tau/src/css/profile/mobile/changeable/common/header.less
+++ b/tau/src/css/profile/mobile/changeable/common/header.less
@@ -19,7 +19,6 @@
 	> .ui-title {
 		display: block;
 		.order(0);
-		height : 67 * @unit_base;
 		color: @color_bar_title_text;
 		font-size  : @font_size_bar_title_text;
 		font-weight : 200; /* tizen font weight tuning */
@@ -27,7 +26,7 @@
 		overflow: hidden;
 		white-space: nowrap;
 		text-align: center;
-		margin: 25 * @unit_base 32 * @unit_base 20 * @unit_base;
+		margin: 21.5 * @unit_base 32 * @unit_base 20 * @unit_base;
 		line-height: 67 * @unit_base;
 	}
 
